2006-12-28  Mike Cvet  <mcvet@redhat.com>

	* StackFrame.java (getSourceFile): Ensure filename is never returned
	as null.

2006-12-27  Mike Cvet  <mcvet@redhat.com>

	* TestStackBacktrace.java (frameAssertions): Now determines the
	identity of stack frames by innermost frame function name, rather than
	relative TID. Fixes #3530.
	Catch the case where sometimes kill() is still in the stack trace. Fixes
	#3743.
	(handleTask): Set the global task to the incoming one.
	(testMultiThreadedBacktrace): Added brokenXXX(3815).

2006-12-21  Mike Cvet  <mcvet@redhat.com>

	* TestStackBacktrace.java: Moved into frysk.rt from frysk.rt.tests.
	* TestRunState.java: Ditto.
	* TestStepping.java: Ditto.

2006-12-19  Mike Cvet  <mcvet@redhat.com>

	* tests/TestStepping.java (testAsmStepping): Added. Marked as broken
	re #3767.

2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* tests/TestRunState.java (testInstructionStepping)
	(testLineStepping): Use brokenPpcXXX.
	* tests/TestStepping.java (testRecursiveLineStepping): Ditto.
	* tests/TestStackBacktrace.java (testBacktrace): Note broken due
	to 3744.  Use brokenPpcXXX.
	(testThreadedBacktrace): Note broken due to 3743.  Use
	brokenPpcXXX.

2006-12-15  Mike Cvet  <mcvet@redhat.com>
	
	* StackFrame.java (getMethodName): Return empty string if either the
	FrameCursor's name is null, or the cursor itself.
	(toPrint): Catch broken FrameCursors.
	* RunState.java (setUpStep): Fixed #3735. If none of the Tasks
	belonging to the process have debuginfo, perform an instruction 
	step instead of a line step; clear out line-stepping data structures.

2006-12-14  Mike Cvet  <mcvet@redhat.com>

	* StackFactory.java (createStackFrame): Catch Exceptions coming out of
	StackTraceCreator, and return an empty StackFrame instead of null. Fixes
	#3723.
	* StackFrame.java (StackFrame): New constructor, taking a Task. Used to 
	create an empty StackFrame.
	(getMethodName): If the method name is null, return an empty String 
	instead.
