@@ -1,3 +1,8 @@
+2006-12-30  Mike Cvet  <mcvet@redhat.com>
+
+	* SourceWindow.java (populateStackBrowser): Handles line
+	highlighting better.
+
 2006-12-28  Mike Cvet  <mcvet@redhat.com>
 
 	* SourceBuffer.java (setCurrentLine): Removed; replaced in
