@@ -1,3 +1,8 @@
+2006-12-30  Mike Cvet  <mcvet@redhat.com>
+
+	* StackFrame.java (toPrint): Switched the order of file and function
+	name in output.
+
 2006-12-28  Mike Cvet  <mcvet@redhat.com>
 
 	* StackFrame.java (getSourceFile): Ensure filename is never returned
